// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TripList renders correctly when given four trips Match with Snapshot 1`] = `
<div
  className="component"
>
  <h2>
     
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-code fa-w-20 "
      data-icon="code"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     
    Test Trip List
     
  </h2>
  <div>
    <a
      href="/dashboard"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        className="card"
      >
        <h1>
          Around New Zealand
        </h1>
        <div
          className="alerts"
        >
          
          <span
            className="tooltip"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-sticky-note fa-w-14 "
                data-icon="sticky-note"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M312 320h136V56c0-13.3-10.7-24-24-24H24C10.7 32 0 42.7 0 56v400c0 13.3 10.7 24 24 24h264V344c0-13.2 10.8-24 24-24zm129 55l-98 98c-4.5 4.5-10.6 7-17 7h-6V352h128v6.1c0 6.3-2.5 12.4-7 16.9z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              3
            </span>
            <div
              className="text"
            >
              3 new notes
            </div>
          </span>
        </div>
      </div>
    </a>
    <a
      href="/dashboard"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        className="card"
      >
        <h1>
          Thailand Adventure
        </h1>
        <div
          className="alerts"
        >
          <span
            className="tooltip"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-comment-dots fa-w-16 "
                data-icon="comment-dots"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32zM128 272c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              10
            </span>
            <div
              className="text"
            >
              10 new chat messages
            </div>
          </span>
          <span
            className="tooltip"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-sticky-note fa-w-14 "
                data-icon="sticky-note"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M312 320h136V56c0-13.3-10.7-24-24-24H24C10.7 32 0 42.7 0 56v400c0 13.3 10.7 24 24 24h264V344c0-13.2 10.8-24 24-24zm129 55l-98 98c-4.5 4.5-10.6 7-17 7h-6V352h128v6.1c0 6.3-2.5 12.4-7 16.9z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              99+
            </span>
            <div
              className="text"
            >
              99+ new notes
            </div>
          </span>
        </div>
      </div>
    </a>
    <a
      href="/dashboard"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        className="card"
      >
        <h1>
          Taipei Yummy Trip
        </h1>
        <div
          className="alerts"
        >
          
          <span
            className="tooltip"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-sticky-note fa-w-14 "
                data-icon="sticky-note"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M312 320h136V56c0-13.3-10.7-24-24-24H24C10.7 32 0 42.7 0 56v400c0 13.3 10.7 24 24 24h264V344c0-13.2 10.8-24 24-24zm129 55l-98 98c-4.5 4.5-10.6 7-17 7h-6V352h128v6.1c0 6.3-2.5 12.4-7 16.9z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              23
            </span>
            <div
              className="text"
            >
              23 new notes
            </div>
          </span>
        </div>
      </div>
    </a>
    <a
      href="/dashboard"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        className="card"
      >
        <h1>
          Africa Safari
        </h1>
        <div
          className="alerts"
        >
          <span
            className="tooltip"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-comment-dots fa-w-16 "
                data-icon="comment-dots"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32zM128 272c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              8
            </span>
            <div
              className="text"
            >
              8 new chat messages
            </div>
          </span>
          
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Test TripList renders correctly when given no trip Match with Snapshot 1`] = `
<div
  className="component"
>
  <h2>
     
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-code fa-w-20 "
      data-icon="code"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     
    Test Trip List
     
  </h2>
  <h3
    className="no-display"
  >
    This should be displayed when there is no trip
  </h3>
</div>
`;

exports[`Test TripList renders correctly when given no trip TripList's snapshot is stable 1`] = `
<div
  className="component"
>
  <h2>
     
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-code fa-w-20 "
      data-icon="code"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
     
    Test Trip List
     
  </h2>
  <h3
    className="no-display"
  >
    This should be displayed when there is no trip
  </h3>
</div>
`;
